--- a/_config.yml
+++ b/_config.yml
@@ -15,9 +15,11 @@ keywords: ityouknow,纯洁的微笑,Spring,Spring Boot,Spring Cloud,MongoDB,Jvm,
 encoding: "utf-8"
 favicon: favicon.ico 
 
-repository: ityouknow/ityouknow.github.io
-github_url: https://github.com/ityouknow
-url: http://www.ityouknow.com
+
+repository: K-Young96/K-Young96.github.io
+github_url: https://github.com/K-Young96
+url: https://K-Young96.github.io
+
 enforce_ssl: ityouknow.com
 
 ## Gem
