--- a/_config.yml
+++ b/_config.yml
@@ -16,9 +16,9 @@ encoding: "utf-8"
 favicon: favicon.ico 
 
 
-repository: K-Young96/K-Young96.github.io
+repository: K-Young96/KYoung.github.io
 github_url: https://github.com/K-Young96
-url: https://K-Young96.github.io
+url: https://KYoung.github.io
 
 enforce_ssl: ityouknow.com
 
